:eyes: typo fix

--- a/email-templates/reset-password.html
+++ b/email-templates/reset-password.html
@@ -534,7 +534,7 @@
                         <p>
                           Для обеспечения безопасности этот запрос был получен
                           от устройства {{operating_system}} с использованием
-                          {{browser_name}}. Если вы не запросили сброс пароля,
+                          {{browser_name}}. Если вы не запрашивали сброс пароля,
                           пожалуйста, проигнорируйте это письмо или
                           <a href="{{support_url}}">обратитесь в поддержку</a>
                           если у вас остались вопросы.
