:eyes: fix typo

--- a/email-templates/confirm-email.html
+++ b/email-templates/confirm-email.html
@@ -490,9 +490,9 @@
                         <p>
                           Недавно вы запросили подтверждение почты для своей учетной
                           записи Dreamer. Используйте кнопку ниже, чтобы
-                          сбросить его.
+                          подтвердить вашу почту.
                           <strong
-                            >Сброс пароля действителен только в течение одного
+                            >Подтверждение почты действительно только в течение одного
                             часа.</strong
                           >
                         </p>
