:eyes: fix typo

--- a/email-templates/reset-password.html
+++ b/email-templates/reset-password.html
@@ -488,7 +488,7 @@
                       <div class="f-fallback">
                         <h1>Здравствуйте,&nbsp;{{name}}!</h1>
                         <p>
-                          Недавно вы запросили сбросить пароль для своей учетной
+                          Недавно вы запросили сброс пароля для своей учетной
                           записи Dreamer. Используйте кнопку ниже, чтобы
                           сбросить его.
                           <strong
