:eyes: rm user name in templates

--- a/email-templates/reset-password.html
+++ b/email-templates/reset-password.html
@@ -486,7 +486,7 @@
                   <tr>
                     <td class="content-cell">
                       <div class="f-fallback">
-                        <h1>Здравствуйте,&nbsp;{{name}}!</h1>
+                        <h1>Здравствуйте!</h1>
                         <p>
                           Недавно вы запросили сброс пароля для своей учетной
                           записи Dreamer. Используйте кнопку ниже, чтобы
