--- a/email-templates/welcome.html
+++ b/email-templates/welcome.html
@@ -502,7 +502,7 @@
                   <tr>
                     <td class="content-cell">
                       <div class="f-fallback">
-                        <h1>Здравствуйте,&nbsp;{{name}}!</h1>
+                        <h1>Здравствуйте!</h1>
                         <p>
                           Спасибо, что попробовали Dreamer. Мы очень рады видеть
                           вас на борту. Чтобы получить максимальную отдачу от
